--- a/index.html
+++ b/index.html
@@ -45,27 +45,27 @@
               
 <tr>
     <td class="col-md-1">1</td>
-    <td class="col-md-2">QQQ</td>
+    <td class="col-md-2">CRON</td>
     
-<td class="col-md-3">1.91</td>
+<td class="col-md-3">1.19</td>
   
 
-<td class="col-md-4">7.24</td>
+<td class="col-md-4">5.75</td>
   
 
-<td class="col-md-5">1.17</td>
+<td class="col-md-5">5.43</td>
   
 
-<td class="col-md-6">1.40</td>
+<td class="col-md-6">8.50</td>
   
 
-<td class="col-md-7">1.26</td>
+<td class="col-md-7">2.09</td>
   
 
-<td class="col-md-8">0.79</td>
+<td class="col-md-8">1.67</td>
   
 
-<td class="col-md-9">0.33</td>
+<td class="col-md-9">1.00</td>
   
 s
 </tr>
