--- a/index.html
+++ b/index.html
@@ -47,25 +47,54 @@
     <td class="col-md-1">1</td>
     <td class="col-md-2">CRON</td>
     
-<td class="col-md-3">1.19</td>
+<td class="col-md-3">1.20</td>
   
 
-<td class="col-md-4">5.75</td>
+<td class="col-md-4">5.88</td>
   
 
-<td class="col-md-5">5.43</td>
+<td class="col-md-5">5.71</td>
   
 
-<td class="col-md-6">8.50</td>
+<td class="col-md-6">9.00</td>
   
 
-<td class="col-md-7">2.09</td>
+<td class="col-md-7">2.00</td>
   
 
-<td class="col-md-8">1.67</td>
+<td class="col-md-8">1.57</td>
   
 
-<td class="col-md-9">1.00</td>
+<td class="col-md-9">1.25</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">2</td>
+    <td class="col-md-2">CGC</td>
+    
+<td class="col-md-3">0.81</td>
+  
+
+<td class="col-md-4">2.59</td>
+  
+
+<td class="col-md-5">2.43</td>
+  
+
+<td class="col-md-6">7.50</td>
+  
+
+<td class="col-md-7">0.67</td>
+  
+
+<td class="col-md-8">1.29</td>
+  
+
+<td class="col-md-9">1.67</td>
   
 s
 </tr>
