--- a/index.html
+++ b/index.html
@@ -50,19 +50,19 @@
 <td class="col-md-3">0.81</td>
   
 
-<td class="col-md-4">2.52</td>
+<td class="col-md-4">2.54</td>
   
 
-<td class="col-md-5">2.70</td>
+<td class="col-md-5">2.75</td>
   
 
-<td class="col-md-6">6.71</td>
+<td class="col-md-6">6.86</td>
   
 
-<td class="col-md-7">0.68</td>
+<td class="col-md-7">0.71</td>
   
 
-<td class="col-md-8">4.00</td>
+<td class="col-md-8">4.33</td>
   
 
 <td class="col-md-9">0.40</td>
@@ -85,16 +85,45 @@ s
 <td class="col-md-5">6.43</td>
   
 
-<td class="col-md-6">6.50</td>
+<td class="col-md-6">5.43</td>
   
 
-<td class="col-md-7">2.55</td>
+<td class="col-md-7">2.80</td>
   
 
 <td class="col-md-8">3.20</td>
   
 
-<td class="col-md-9">0.80</td>
+<td class="col-md-9">0.60</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">3</td>
+    <td class="col-md-2">TLRY</td>
+    
+<td class="col-md-3">0.92</td>
+  
+
+<td class="col-md-4">5.28</td>
+  
+
+<td class="col-md-5">2.96</td>
+  
+
+<td class="col-md-6">1.96</td>
+  
+
+<td class="col-md-7">0.55</td>
+  
+
+<td class="col-md-8">2.67</td>
+  
+
+<td class="col-md-9">0.33</td>
   
 s
 </tr>
