--- a/index.html
+++ b/index.html
@@ -45,27 +45,27 @@
               
 <tr>
     <td class="col-md-1">1</td>
-    <td class="col-md-2">TLRY</td>
+    <td class="col-md-2">CRON</td>
     
-<td class="col-md-3">0.93</td>
+<td class="col-md-3">1.25</td>
   
 
-<td class="col-md-4">5.20</td>
+<td class="col-md-4">6.25</td>
   
 
-<td class="col-md-5">2.75</td>
+<td class="col-md-5">6.57</td>
   
 
-<td class="col-md-6">2.08</td>
+<td class="col-md-6">5.57</td>
   
 
-<td class="col-md-7">0.62</td>
+<td class="col-md-7">2.00</td>
   
 
-<td class="col-md-8">3.33</td>
+<td class="col-md-8">3.20</td>
   
 
-<td class="col-md-9">0.50</td>
+<td class="col-md-9">0.33</td>
   
 s
 </tr>
