--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
 <td class="col-md-6">1.34</td>
   
 
-<td class="col-md-7">0.95</td>
+<td class="col-md-7">0.87</td>
   
 
-<td class="col-md-8">1.67</td>
+<td class="col-md-8">2.00</td>
   
 
-<td class="col-md-9">0.17</td>
+<td class="col-md-9">0.25</td>
   
 s
 </tr>
@@ -85,16 +85,45 @@ s
 <td class="col-md-5">1.48</td>
   
 
-<td class="col-md-6">1.36</td>
+<td class="col-md-6">1.32</td>
   
 
-<td class="col-md-7">1.05</td>
+<td class="col-md-7">1.03</td>
   
 
-<td class="col-md-8">1.27</td>
+<td class="col-md-8">1.40</td>
   
 
 <td class="col-md-9">0.25</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">3</td>
+    <td class="col-md-2">AMZN</td>
+    
+<td class="col-md-3">1.73</td>
+  
+
+<td class="col-md-4">2.07</td>
+  
+
+<td class="col-md-5">1.04</td>
+  
+
+<td class="col-md-6">0.75</td>
+  
+
+<td class="col-md-7">1.26</td>
+  
+
+<td class="col-md-8">1.25</td>
+  
+
+<td class="col-md-9">0.33</td>
   
 s
 </tr>
