--- a/index.html
+++ b/index.html
@@ -53,16 +53,16 @@
 <td class="col-md-4">2.08</td>
   
 
-<td class="col-md-5">1.04</td>
+<td class="col-md-5">1.06</td>
   
 
-<td class="col-md-6">0.75</td>
+<td class="col-md-6">0.77</td>
   
 
-<td class="col-md-7">1.15</td>
+<td class="col-md-7">1.20</td>
   
 
-<td class="col-md-8">1.25</td>
+<td class="col-md-8">2.20</td>
   
 
 <td class="col-md-9">0.33</td>
@@ -74,27 +74,27 @@ s
 
 <tr>
     <td class="col-md-1">2</td>
-    <td class="col-md-2">QQQ</td>
+    <td class="col-md-2">MSFT</td>
     
-<td class="col-md-3">1.89</td>
+<td class="col-md-3">0.71</td>
   
 
-<td class="col-md-4">6.98</td>
+<td class="col-md-4">5.41</td>
   
 
-<td class="col-md-5">1.48</td>
+<td class="col-md-5">2.30</td>
   
 
-<td class="col-md-6">1.32</td>
+<td class="col-md-6">1.30</td>
   
 
-<td class="col-md-7">0.92</td>
+<td class="col-md-7">2.25</td>
   
 
-<td class="col-md-8">1.18</td>
+<td class="col-md-8">0.00</td>
   
 
-<td class="col-md-9">0.25</td>
+<td class="col-md-9">0.67</td>
   
 s
 </tr>
