--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <td class="col-md-4">2.08</td>
   
 
-<td class="col-md-5">1.06</td>
+<td class="col-md-5">1.07</td>
   
 
 <td class="col-md-6">0.77</td>
@@ -74,6 +74,35 @@ s
 
 <tr>
     <td class="col-md-1">2</td>
+    <td class="col-md-2">CGC</td>
+    
+<td class="col-md-3">0.83</td>
+  
+
+<td class="col-md-4">2.45</td>
+  
+
+<td class="col-md-5">3.71</td>
+  
+
+<td class="col-md-6">2.50</td>
+  
+
+<td class="col-md-7">1.25</td>
+  
+
+<td class="col-md-8">0.83</td>
+  
+
+<td class="col-md-9">0.67</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">3</td>
     <td class="col-md-2">MSFT</td>
     
 <td class="col-md-3">0.71</td>
@@ -94,7 +123,7 @@ s
 <td class="col-md-8">0.00</td>
   
 
-<td class="col-md-9">0.67</td>
+<td class="col-md-9">0.33</td>
   
 s
 </tr>
