--- a/index.html
+++ b/index.html
@@ -53,19 +53,48 @@
 <td class="col-md-4">2.10</td>
   
 
-<td class="col-md-5">1.02</td>
+<td class="col-md-5">1.03</td>
   
 
-<td class="col-md-6">1.19</td>
+<td class="col-md-6">1.21</td>
   
 
-<td class="col-md-7">1.48</td>
+<td class="col-md-7">1.52</td>
   
 
-<td class="col-md-8">1.70</td>
+<td class="col-md-8">1.80</td>
   
 
-<td class="col-md-9">0.50</td>
+<td class="col-md-9">0.25</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">2</td>
+    <td class="col-md-2">QQQ</td>
+    
+<td class="col-md-3">1.91</td>
+  
+
+<td class="col-md-4">6.97</td>
+  
+
+<td class="col-md-5">1.68</td>
+  
+
+<td class="col-md-6">1.35</td>
+  
+
+<td class="col-md-7">1.13</td>
+  
+
+<td class="col-md-8">1.29</td>
+  
+
+<td class="col-md-9">0.25</td>
   
 s
 </tr>
