--- a/index.html
+++ b/index.html
@@ -50,22 +50,51 @@
 <td class="col-md-3">1.75</td>
   
 
-<td class="col-md-4">2.10</td>
+<td class="col-md-4">2.11</td>
   
 
 <td class="col-md-5">1.04</td>
   
 
-<td class="col-md-6">1.23</td>
+<td class="col-md-6">1.30</td>
   
 
-<td class="col-md-7">1.68</td>
+<td class="col-md-7">1.77</td>
   
 
-<td class="col-md-8">1.90</td>
+<td class="col-md-8">2.10</td>
   
 
-<td class="col-md-9">0.60</td>
+<td class="col-md-9">1.25</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">2</td>
+    <td class="col-md-2">SNAP</td>
+    
+<td class="col-md-3">1.49</td>
+  
+
+<td class="col-md-4">2.56</td>
+  
+
+<td class="col-md-5">1.45</td>
+  
+
+<td class="col-md-6">2.22</td>
+  
+
+<td class="col-md-7">1.67</td>
+  
+
+<td class="col-md-8">2.00</td>
+  
+
+<td class="col-md-9">0.33</td>
   
 s
 </tr>
