--- a/index.html
+++ b/index.html
@@ -45,27 +45,27 @@
               
 <tr>
     <td class="col-md-1">1</td>
-    <td class="col-md-2">SNAP</td>
+    <td class="col-md-2">QQQ</td>
     
-<td class="col-md-3">1.49</td>
+<td class="col-md-3">1.92</td>
   
 
-<td class="col-md-4">2.57</td>
+<td class="col-md-4">6.74</td>
   
 
-<td class="col-md-5">1.48</td>
+<td class="col-md-5">1.76</td>
   
 
-<td class="col-md-6">2.28</td>
+<td class="col-md-6">1.28</td>
   
 
-<td class="col-md-7">1.56</td>
+<td class="col-md-7">1.34</td>
   
 
-<td class="col-md-8">2.25</td>
+<td class="col-md-8">1.57</td>
   
 
-<td class="col-md-9">0.33</td>
+<td class="col-md-9">0.75</td>
   
 s
 </tr>
