--- a/index.html
+++ b/index.html
@@ -47,25 +47,25 @@
     <td class="col-md-1">1</td>
     <td class="col-md-2">AMZN</td>
     
-<td class="col-md-3">1.75</td>
+<td class="col-md-3">1.76</td>
   
 
 <td class="col-md-4">2.17</td>
   
 
-<td class="col-md-5">1.06</td>
+<td class="col-md-5">1.08</td>
   
 
-<td class="col-md-6">1.32</td>
+<td class="col-md-6">1.36</td>
   
 
-<td class="col-md-7">1.58</td>
+<td class="col-md-7">1.56</td>
   
 
-<td class="col-md-8">2.00</td>
+<td class="col-md-8">2.40</td>
   
 
-<td class="col-md-9">1.33</td>
+<td class="col-md-9">0.80</td>
   
 s
 </tr>
@@ -79,22 +79,51 @@ s
 <td class="col-md-3">1.93</td>
   
 
-<td class="col-md-4">6.75</td>
+<td class="col-md-4">6.76</td>
   
 
-<td class="col-md-5">1.81</td>
+<td class="col-md-5">1.85</td>
   
 
-<td class="col-md-6">1.30</td>
+<td class="col-md-6">1.31</td>
   
 
-<td class="col-md-7">1.18</td>
+<td class="col-md-7">1.15</td>
   
 
-<td class="col-md-8">1.33</td>
+<td class="col-md-8">1.40</td>
   
 
-<td class="col-md-9">1.00</td>
+<td class="col-md-9">0.50</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">3</td>
+    <td class="col-md-2">CGC</td>
+    
+<td class="col-md-3">0.85</td>
+  
+
+<td class="col-md-4">2.51</td>
+  
+
+<td class="col-md-5">5.00</td>
+  
+
+<td class="col-md-6">1.69</td>
+  
+
+<td class="col-md-7">1.75</td>
+  
+
+<td class="col-md-8">0.78</td>
+  
+
+<td class="col-md-9">0.67</td>
   
 s
 </tr>
