--- a/index.html
+++ b/index.html
@@ -47,25 +47,54 @@
     <td class="col-md-1">1</td>
     <td class="col-md-2">AMZN</td>
     
-<td class="col-md-3">1.78</td>
+<td class="col-md-3">1.79</td>
   
 
 <td class="col-md-4">2.25</td>
   
 
-<td class="col-md-5">1.33</td>
+<td class="col-md-5">1.35</td>
   
 
-<td class="col-md-6">1.41</td>
+<td class="col-md-6">1.44</td>
   
 
-<td class="col-md-7">2.30</td>
+<td class="col-md-7">2.39</td>
   
 
-<td class="col-md-8">1.05</td>
+<td class="col-md-8">1.11</td>
   
 
-<td class="col-md-9">0.60</td>
+<td class="col-md-9">0.50</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">2</td>
+    <td class="col-md-2">QQQ</td>
+    
+<td class="col-md-3">1.93</td>
+  
+
+<td class="col-md-4">6.73</td>
+  
+
+<td class="col-md-5">1.79</td>
+  
+
+<td class="col-md-6">1.65</td>
+  
+
+<td class="col-md-7">1.41</td>
+  
+
+<td class="col-md-8">0.77</td>
+  
+
+<td class="col-md-9">1.33</td>
   
 s
 </tr>
