--- a/index.html
+++ b/index.html
@@ -50,22 +50,51 @@
 <td class="col-md-3">1.78</td>
   
 
-<td class="col-md-4">2.26</td>
+<td class="col-md-4">2.27</td>
   
 
-<td class="col-md-5">1.26</td>
+<td class="col-md-5">1.27</td>
   
 
-<td class="col-md-6">1.65</td>
+<td class="col-md-6">1.73</td>
   
 
-<td class="col-md-7">2.52</td>
+<td class="col-md-7">2.46</td>
   
 
-<td class="col-md-8">1.06</td>
+<td class="col-md-8">1.05</td>
   
 
-<td class="col-md-9">1.33</td>
+<td class="col-md-9">1.25</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">2</td>
+    <td class="col-md-2">QQQ</td>
+    
+<td class="col-md-3">1.92</td>
+  
+
+<td class="col-md-4">6.60</td>
+  
+
+<td class="col-md-5">1.85</td>
+  
+
+<td class="col-md-6">1.41</td>
+  
+
+<td class="col-md-7">1.82</td>
+  
+
+<td class="col-md-8">0.58</td>
+  
+
+<td class="col-md-9">0.67</td>
   
 s
 </tr>
