--- a/index.html
+++ b/index.html
@@ -62,10 +62,39 @@
 <td class="col-md-7">2.58</td>
   
 
-<td class="col-md-8">1.22</td>
+<td class="col-md-8">1.17</td>
   
 
-<td class="col-md-9">1.75</td>
+<td class="col-md-9">1.25</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">2</td>
+    <td class="col-md-2">NIO</td>
+    
+<td class="col-md-3">7.74</td>
+  
+
+<td class="col-md-4">1.29</td>
+  
+
+<td class="col-md-5">1.05</td>
+  
+
+<td class="col-md-6">3.09</td>
+  
+
+<td class="col-md-7">0.36</td>
+  
+
+<td class="col-md-8">0.00</td>
+  
+
+<td class="col-md-9">0.33</td>
   
 s
 </tr>
