--- a/index.html
+++ b/index.html
@@ -53,19 +53,48 @@
 <td class="col-md-4">2.28</td>
   
 
-<td class="col-md-5">1.21</td>
+<td class="col-md-5">1.17</td>
   
 
-<td class="col-md-6">1.93</td>
+<td class="col-md-6">2.02</td>
   
 
-<td class="col-md-7">2.78</td>
+<td class="col-md-7">2.62</td>
   
 
 <td class="col-md-8">0.86</td>
   
 
-<td class="col-md-9">0.57</td>
+<td class="col-md-9">0.50</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">2</td>
+    <td class="col-md-2">QQQ</td>
+    
+<td class="col-md-3">1.92</td>
+  
+
+<td class="col-md-4">6.74</td>
+  
+
+<td class="col-md-5">1.81</td>
+  
+
+<td class="col-md-6">1.41</td>
+  
+
+<td class="col-md-7">1.38</td>
+  
+
+<td class="col-md-8">0.67</td>
+  
+
+<td class="col-md-9">0.67</td>
   
 s
 </tr>
