--- a/index.html
+++ b/index.html
@@ -56,16 +56,74 @@
 <td class="col-md-5">1.35</td>
   
 
-<td class="col-md-6">1.08</td>
+<td class="col-md-6">1.00</td>
   
 
-<td class="col-md-7">1.17</td>
+<td class="col-md-7">1.27</td>
   
 
 <td class="col-md-8">1.00</td>
   
 
-<td class="col-md-9">0.67</td>
+<td class="col-md-9">0.33</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">2</td>
+    <td class="col-md-2">AMZN</td>
+    
+<td class="col-md-3">1.78</td>
+  
+
+<td class="col-md-4">2.29</td>
+  
+
+<td class="col-md-5">1.16</td>
+  
+
+<td class="col-md-6">2.20</td>
+  
+
+<td class="col-md-7">1.43</td>
+  
+
+<td class="col-md-8">0.79</td>
+  
+
+<td class="col-md-9">0.33</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">3</td>
+    <td class="col-md-2">QQQ</td>
+    
+<td class="col-md-3">1.91</td>
+  
+
+<td class="col-md-4">6.78</td>
+  
+
+<td class="col-md-5">1.74</td>
+  
+
+<td class="col-md-6">1.47</td>
+  
+
+<td class="col-md-7">1.04</td>
+  
+
+<td class="col-md-8">0.71</td>
+  
+
+<td class="col-md-9">1.00</td>
   
 s
 </tr>
