--- a/index.html
+++ b/index.html
@@ -50,22 +50,51 @@
 <td class="col-md-3">1.92</td>
   
 
-<td class="col-md-4">6.76</td>
+<td class="col-md-4">6.83</td>
   
 
-<td class="col-md-5">1.78</td>
+<td class="col-md-5">1.79</td>
   
 
-<td class="col-md-6">1.38</td>
+<td class="col-md-6">1.32</td>
   
 
-<td class="col-md-7">0.76</td>
+<td class="col-md-7">0.81</td>
   
 
-<td class="col-md-8">1.18</td>
+<td class="col-md-8">1.40</td>
   
 
-<td class="col-md-9">0.75</td>
+<td class="col-md-9">1.33</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">2</td>
+    <td class="col-md-2">AMZN</td>
+    
+<td class="col-md-3">1.78</td>
+  
+
+<td class="col-md-4">2.32</td>
+  
+
+<td class="col-md-5">1.21</td>
+  
+
+<td class="col-md-6">2.24</td>
+  
+
+<td class="col-md-7">1.24</td>
+  
+
+<td class="col-md-8">0.50</td>
+  
+
+<td class="col-md-9">0.50</td>
   
 s
 </tr>
