--- a/index.html
+++ b/index.html
@@ -47,25 +47,25 @@
     <td class="col-md-1">1</td>
     <td class="col-md-2">QQQ</td>
     
-<td class="col-md-3">1.92</td>
+<td class="col-md-3">1.93</td>
   
 
-<td class="col-md-4">6.77</td>
+<td class="col-md-4">6.79</td>
   
 
-<td class="col-md-5">1.80</td>
+<td class="col-md-5">1.82</td>
   
 
-<td class="col-md-6">1.38</td>
+<td class="col-md-6">1.37</td>
   
 
-<td class="col-md-7">0.73</td>
+<td class="col-md-7">0.75</td>
   
 
-<td class="col-md-8">1.40</td>
+<td class="col-md-8">1.78</td>
   
 
-<td class="col-md-9">1.00</td>
+<td class="col-md-9">0.75</td>
   
 s
 </tr>
@@ -74,27 +74,27 @@ s
 
 <tr>
     <td class="col-md-1">2</td>
-    <td class="col-md-2">AMZN</td>
+    <td class="col-md-2">CGC</td>
     
-<td class="col-md-3">1.78</td>
+<td class="col-md-3">0.85</td>
   
 
-<td class="col-md-4">2.33</td>
+<td class="col-md-4">2.64</td>
   
 
-<td class="col-md-5">1.23</td>
+<td class="col-md-5">7.00</td>
   
 
-<td class="col-md-6">2.40</td>
+<td class="col-md-6">1.05</td>
   
 
-<td class="col-md-7">1.29</td>
+<td class="col-md-7">0.43</td>
   
 
-<td class="col-md-8">0.79</td>
+<td class="col-md-8">0.00</td>
   
 
-<td class="col-md-9">1.50</td>
+<td class="col-md-9">0.25</td>
   
 s
 </tr>
