--- a/index.html
+++ b/index.html
@@ -50,22 +50,22 @@
 <td class="col-md-3">1.93</td>
   
 
-<td class="col-md-4">6.79</td>
+<td class="col-md-4">6.80</td>
   
 
-<td class="col-md-5">1.82</td>
+<td class="col-md-5">1.84</td>
   
 
-<td class="col-md-6">1.37</td>
+<td class="col-md-6">1.39</td>
   
 
-<td class="col-md-7">0.75</td>
+<td class="col-md-7">0.73</td>
   
 
-<td class="col-md-8">1.78</td>
+<td class="col-md-8">1.60</td>
   
 
-<td class="col-md-9">0.75</td>
+<td class="col-md-9">1.33</td>
   
 s
 </tr>
@@ -74,9 +74,38 @@ s
 
 <tr>
     <td class="col-md-1">2</td>
+    <td class="col-md-2">AMZN</td>
+    
+<td class="col-md-3">1.79</td>
+  
+
+<td class="col-md-4">2.34</td>
+  
+
+<td class="col-md-5">1.24</td>
+  
+
+<td class="col-md-6">2.54</td>
+  
+
+<td class="col-md-7">1.20</td>
+  
+
+<td class="col-md-8">1.00</td>
+  
+
+<td class="col-md-9">2.00</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">3</td>
     <td class="col-md-2">CGC</td>
     
-<td class="col-md-3">0.85</td>
+<td class="col-md-3">0.84</td>
   
 
 <td class="col-md-4">2.64</td>
@@ -85,10 +114,10 @@ s
 <td class="col-md-5">7.00</td>
   
 
-<td class="col-md-6">1.05</td>
+<td class="col-md-6">1.00</td>
   
 
-<td class="col-md-7">0.43</td>
+<td class="col-md-7">0.40</td>
   
 
 <td class="col-md-8">0.00</td>
