--- a/index.html
+++ b/index.html
@@ -45,27 +45,27 @@
               
 <tr>
     <td class="col-md-1">1</td>
-    <td class="col-md-2">CGC</td>
+    <td class="col-md-2">QQQ</td>
     
-<td class="col-md-3">0.84</td>
+<td class="col-md-3">1.94</td>
   
 
-<td class="col-md-4">2.64</td>
+<td class="col-md-4">6.76</td>
   
 
-<td class="col-md-5">7.00</td>
+<td class="col-md-5">1.93</td>
   
 
-<td class="col-md-6">0.91</td>
+<td class="col-md-6">1.39</td>
   
 
-<td class="col-md-7">0.43</td>
+<td class="col-md-7">0.68</td>
   
 
 <td class="col-md-8">2.00</td>
   
 
-<td class="col-md-9">0.25</td>
+<td class="col-md-9">1.67</td>
   
 s
 </tr>
@@ -82,19 +82,19 @@ s
 <td class="col-md-4">2.36</td>
   
 
-<td class="col-md-5">1.28</td>
+<td class="col-md-5">1.30</td>
   
 
-<td class="col-md-6">2.62</td>
+<td class="col-md-6">2.58</td>
   
 
-<td class="col-md-7">1.22</td>
+<td class="col-md-7">1.15</td>
   
 
-<td class="col-md-8">0.95</td>
+<td class="col-md-8">1.18</td>
   
 
-<td class="col-md-9">3.00</td>
+<td class="col-md-9">1.33</td>
   
 s
 </tr>
