--- a/index.html
+++ b/index.html
@@ -47,25 +47,25 @@
     <td class="col-md-1">1</td>
     <td class="col-md-2">AMZN</td>
     
-<td class="col-md-3">1.79</td>
+<td class="col-md-3">1.80</td>
   
 
-<td class="col-md-4">2.35</td>
+<td class="col-md-4">2.33</td>
   
 
-<td class="col-md-5">1.34</td>
+<td class="col-md-5">1.36</td>
   
 
-<td class="col-md-6">2.62</td>
+<td class="col-md-6">2.68</td>
   
 
-<td class="col-md-7">1.06</td>
+<td class="col-md-7">1.10</td>
   
 
-<td class="col-md-8">1.75</td>
+<td class="col-md-8">2.09</td>
   
 
-<td class="col-md-9">0.25</td>
+<td class="col-md-9">0.50</td>
   
 s
 </tr>
@@ -82,19 +82,48 @@ s
 <td class="col-md-4">6.72</td>
   
 
-<td class="col-md-5">1.94</td>
+<td class="col-md-5">1.93</td>
   
 
-<td class="col-md-6">1.44</td>
+<td class="col-md-6">1.39</td>
+  
+
+<td class="col-md-7">0.74</td>
+  
+
+<td class="col-md-8">1.45</td>
+  
+
+<td class="col-md-9">0.50</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">3</td>
+    <td class="col-md-2">CRON</td>
+    
+<td class="col-md-3">1.43</td>
+  
+
+<td class="col-md-4">6.58</td>
+  
+
+<td class="col-md-5">8.38</td>
+  
+
+<td class="col-md-6">0.76</td>
   
 
 <td class="col-md-7">0.71</td>
   
 
-<td class="col-md-8">1.55</td>
+<td class="col-md-8">0.00</td>
   
 
-<td class="col-md-9">0.33</td>
+<td class="col-md-9">0.67</td>
   
 s
 </tr>
