--- a/index.html
+++ b/index.html
@@ -47,19 +47,19 @@
     <td class="col-md-1">1</td>
     <td class="col-md-2">AMZN</td>
     
-<td class="col-md-3">1.80</td>
+<td class="col-md-3">1.81</td>
   
 
-<td class="col-md-4">2.32</td>
+<td class="col-md-4">2.31</td>
   
 
 <td class="col-md-5">1.39</td>
   
 
-<td class="col-md-6">2.78</td>
+<td class="col-md-6">2.80</td>
   
 
-<td class="col-md-7">1.02</td>
+<td class="col-md-7">1.04</td>
   
 
 <td class="col-md-8">2.36</td>
@@ -74,27 +74,27 @@ s
 
 <tr>
     <td class="col-md-1">2</td>
-    <td class="col-md-2">NIO</td>
+    <td class="col-md-2">QQQ</td>
     
-<td class="col-md-3">7.76</td>
+<td class="col-md-3">1.93</td>
   
 
-<td class="col-md-4">1.05</td>
+<td class="col-md-4">6.69</td>
   
 
-<td class="col-md-5">1.75</td>
+<td class="col-md-5">1.94</td>
   
 
-<td class="col-md-6">0.81</td>
+<td class="col-md-6">1.38</td>
   
 
-<td class="col-md-7">2.12</td>
+<td class="col-md-7">0.68</td>
   
 
-<td class="col-md-8">0.62</td>
+<td class="col-md-8">1.42</td>
   
 
-<td class="col-md-9">0.67</td>
+<td class="col-md-9">0.25</td>
   
 s
 </tr>
