--- a/index.html
+++ b/index.html
@@ -53,19 +53,48 @@
 <td class="col-md-4">2.31</td>
   
 
-<td class="col-md-5">1.55</td>
+<td class="col-md-5">1.59</td>
   
 
-<td class="col-md-6">2.72</td>
+<td class="col-md-6">2.77</td>
   
 
-<td class="col-md-7">1.13</td>
+<td class="col-md-7">1.16</td>
   
 
 <td class="col-md-8">1.50</td>
   
 
-<td class="col-md-9">0.83</td>
+<td class="col-md-9">0.86</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">2</td>
+    <td class="col-md-2">QQQ</td>
+    
+<td class="col-md-3">1.93</td>
+  
+
+<td class="col-md-4">6.59</td>
+  
+
+<td class="col-md-5">1.97</td>
+  
+
+<td class="col-md-6">1.28</td>
+  
+
+<td class="col-md-7">0.67</td>
+  
+
+<td class="col-md-8">0.71</td>
+  
+
+<td class="col-md-9">0.33</td>
   
 s
 </tr>
