--- a/index.html
+++ b/index.html
@@ -45,27 +45,27 @@
               
 <tr>
     <td class="col-md-1">1</td>
-    <td class="col-md-2">AMZN</td>
+    <td class="col-md-2">SQ</td>
     
-<td class="col-md-3">1.83</td>
+<td class="col-md-3">1.79</td>
   
 
-<td class="col-md-4">2.31</td>
+<td class="col-md-4">6.95</td>
   
 
-<td class="col-md-5">1.71</td>
+<td class="col-md-5">1.46</td>
   
 
-<td class="col-md-6">2.64</td>
+<td class="col-md-6">1.92</td>
   
 
-<td class="col-md-7">0.97</td>
+<td class="col-md-7">1.27</td>
   
 
-<td class="col-md-8">0.92</td>
+<td class="col-md-8">3.33</td>
   
 
-<td class="col-md-9">1.00</td>
+<td class="col-md-9">0.33</td>
   
 s
 </tr>
