--- a/index.html
+++ b/index.html
@@ -50,22 +50,51 @@
 <td class="col-md-3">1.97</td>
   
 
-<td class="col-md-4">6.67</td>
+<td class="col-md-4">6.68</td>
   
 
-<td class="col-md-5">1.92</td>
+<td class="col-md-5">1.90</td>
   
 
 <td class="col-md-6">0.96</td>
   
 
-<td class="col-md-7">1.22</td>
+<td class="col-md-7">1.17</td>
   
 
-<td class="col-md-8">1.91</td>
+<td class="col-md-8">1.54</td>
   
 
 <td class="col-md-9">0.43</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">2</td>
+    <td class="col-md-2">AAPL</td>
+    
+<td class="col-md-3">1.23</td>
+  
+
+<td class="col-md-4">2.41</td>
+  
+
+<td class="col-md-5">1.55</td>
+  
+
+<td class="col-md-6">0.82</td>
+  
+
+<td class="col-md-7">1.47</td>
+  
+
+<td class="col-md-8">1.11</td>
+  
+
+<td class="col-md-9">1.00</td>
   
 s
 </tr>
