--- a/index.html
+++ b/index.html
@@ -50,22 +50,22 @@
 <td class="col-md-3">1.98</td>
   
 
-<td class="col-md-4">6.65</td>
+<td class="col-md-4">6.56</td>
   
 
-<td class="col-md-5">1.90</td>
+<td class="col-md-5">1.94</td>
   
 
-<td class="col-md-6">1.02</td>
+<td class="col-md-6">1.07</td>
   
 
-<td class="col-md-7">1.21</td>
+<td class="col-md-7">1.31</td>
   
 
-<td class="col-md-8">1.40</td>
+<td class="col-md-8">1.60</td>
   
 
-<td class="col-md-9">1.00</td>
+<td class="col-md-9">2.00</td>
   
 s
 </tr>
@@ -79,22 +79,51 @@ s
 <td class="col-md-3">1.22</td>
   
 
-<td class="col-md-4">2.42</td>
+<td class="col-md-4">2.40</td>
   
 
-<td class="col-md-5">1.57</td>
+<td class="col-md-5">1.58</td>
   
 
-<td class="col-md-6">0.84</td>
+<td class="col-md-6">0.87</td>
   
 
-<td class="col-md-7">1.53</td>
+<td class="col-md-7">1.60</td>
   
 
-<td class="col-md-8">0.82</td>
+<td class="col-md-8">0.91</td>
   
 
-<td class="col-md-9">0.50</td>
+<td class="col-md-9">0.40</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">3</td>
+    <td class="col-md-2">AMZN</td>
+    
+<td class="col-md-3">1.83</td>
+  
+
+<td class="col-md-4">2.36</td>
+  
+
+<td class="col-md-5">1.81</td>
+  
+
+<td class="col-md-6">1.67</td>
+  
+
+<td class="col-md-7">1.20</td>
+  
+
+<td class="col-md-8">0.63</td>
+  
+
+<td class="col-md-9">1.25</td>
   
 s
 </tr>
