--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <td class="col-md-1">1</td>
     <td class="col-md-2">AMZN</td>
     
-<td class="col-md-3">1.84</td>
+<td class="col-md-3">1.85</td>
   
 
 <td class="col-md-4">2.38</td>
@@ -56,13 +56,13 @@
 <td class="col-md-5">1.83</td>
   
 
-<td class="col-md-6">1.46</td>
+<td class="col-md-6">1.41</td>
   
 
-<td class="col-md-7">1.06</td>
+<td class="col-md-7">1.16</td>
   
 
-<td class="col-md-8">2.50</td>
+<td class="col-md-8">2.75</td>
   
 
 <td class="col-md-9">1.25</td>
@@ -79,10 +79,10 @@ s
 <td class="col-md-3">2.00</td>
   
 
-<td class="col-md-4">6.60</td>
+<td class="col-md-4">6.49</td>
   
 
-<td class="col-md-5">1.90</td>
+<td class="col-md-5">1.94</td>
   
 
 <td class="col-md-6">1.04</td>
@@ -91,10 +91,39 @@ s
 <td class="col-md-7">1.25</td>
   
 
-<td class="col-md-8">1.19</td>
+<td class="col-md-8">1.14</td>
   
 
-<td class="col-md-9">0.57</td>
+<td class="col-md-9">0.80</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">3</td>
+    <td class="col-md-2">AMRN</td>
+    
+<td class="col-md-3">0.58</td>
+  
+
+<td class="col-md-4">3.95</td>
+  
+
+<td class="col-md-5">1.90</td>
+  
+
+<td class="col-md-6">2.80</td>
+  
+
+<td class="col-md-7">1.80</td>
+  
+
+<td class="col-md-8">0.00</td>
+  
+
+<td class="col-md-9">1.67</td>
   
 s
 </tr>
