--- a/index.html
+++ b/index.html
@@ -50,22 +50,22 @@
 <td class="col-md-3">1.85</td>
   
 
-<td class="col-md-4">2.40</td>
+<td class="col-md-4">2.41</td>
   
 
-<td class="col-md-5">1.83</td>
+<td class="col-md-5">1.80</td>
   
 
-<td class="col-md-6">1.36</td>
+<td class="col-md-6">1.42</td>
   
 
-<td class="col-md-7">1.02</td>
+<td class="col-md-7">0.95</td>
   
 
-<td class="col-md-8">2.10</td>
+<td class="col-md-8">2.56</td>
   
 
-<td class="col-md-9">2.00</td>
+<td class="col-md-9">1.50</td>
   
 s
 </tr>
@@ -76,10 +76,10 @@ s
     <td class="col-md-1">2</td>
     <td class="col-md-2">QQQ</td>
     
-<td class="col-md-3">1.99</td>
+<td class="col-md-3">2.00</td>
   
 
-<td class="col-md-4">6.50</td>
+<td class="col-md-4">6.52</td>
   
 
 <td class="col-md-5">1.95</td>
@@ -88,13 +88,42 @@ s
 <td class="col-md-6">1.01</td>
   
 
-<td class="col-md-7">1.33</td>
+<td class="col-md-7">1.41</td>
   
 
-<td class="col-md-8">1.19</td>
+<td class="col-md-8">1.13</td>
   
 
-<td class="col-md-9">1.25</td>
+<td class="col-md-9">1.00</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">3</td>
+    <td class="col-md-2">AMRN</td>
+    
+<td class="col-md-3">0.58</td>
+  
+
+<td class="col-md-4">4.00</td>
+  
+
+<td class="col-md-5">2.00</td>
+  
+
+<td class="col-md-6">3.00</td>
+  
+
+<td class="col-md-7">2.00</td>
+  
+
+<td class="col-md-8">0.00</td>
+  
+
+<td class="col-md-9">0.75</td>
   
 s
 </tr>
