--- a/index.html
+++ b/index.html
@@ -56,16 +56,16 @@
 <td class="col-md-5">2.45</td>
   
 
-<td class="col-md-6">3.50</td>
+<td class="col-md-6">2.86</td>
   
 
-<td class="col-md-7">6.00</td>
+<td class="col-md-7">0.00</td>
   
 
-<td class="col-md-8">5.00</td>
+<td class="col-md-8">3.50</td>
   
 
-<td class="col-md-9">1.00</td>
+<td class="col-md-9">0.25</td>
   
 s
 </tr>
@@ -79,22 +79,51 @@ s
 <td class="col-md-3">1.29</td>
   
 
-<td class="col-md-4">2.95</td>
+<td class="col-md-4">2.94</td>
   
 
 <td class="col-md-5">1.02</td>
   
 
-<td class="col-md-6">0.78</td>
+<td class="col-md-6">0.80</td>
   
 
-<td class="col-md-7">0.87</td>
+<td class="col-md-7">0.82</td>
   
 
-<td class="col-md-8">1.20</td>
+<td class="col-md-8">1.00</td>
   
 
-<td class="col-md-9">0.67</td>
+<td class="col-md-9">0.57</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">3</td>
+    <td class="col-md-2">QQQ</td>
+    
+<td class="col-md-3">2.00</td>
+  
+
+<td class="col-md-4">6.28</td>
+  
+
+<td class="col-md-5">1.79</td>
+  
+
+<td class="col-md-6">1.10</td>
+  
+
+<td class="col-md-7">1.51</td>
+  
+
+<td class="col-md-8">0.71</td>
+  
+
+<td class="col-md-9">1.67</td>
   
 s
 </tr>
