--- a/index.html
+++ b/index.html
@@ -47,25 +47,25 @@
     <td class="col-md-1">1</td>
     <td class="col-md-2">TSLA</td>
     
-<td class="col-md-3">1.29</td>
+<td class="col-md-3">1.28</td>
   
 
-<td class="col-md-4">2.90</td>
+<td class="col-md-4">2.89</td>
   
 
-<td class="col-md-5">1.01</td>
+<td class="col-md-5">1.00</td>
   
 
-<td class="col-md-6">0.77</td>
+<td class="col-md-6">0.76</td>
   
 
-<td class="col-md-7">0.88</td>
+<td class="col-md-7">0.93</td>
   
 
 <td class="col-md-8">0.89</td>
   
 
-<td class="col-md-9">0.40</td>
+<td class="col-md-9">0.60</td>
   
 s
 </tr>
@@ -74,27 +74,27 @@ s
 
 <tr>
     <td class="col-md-1">2</td>
-    <td class="col-md-2">AMZN</td>
+    <td class="col-md-2">QQQ</td>
     
-<td class="col-md-3">1.85</td>
+<td class="col-md-3">2.01</td>
   
 
-<td class="col-md-4">2.39</td>
+<td class="col-md-4">6.19</td>
   
 
-<td class="col-md-5">1.83</td>
+<td class="col-md-5">1.73</td>
   
 
-<td class="col-md-6">1.20</td>
+<td class="col-md-6">1.11</td>
   
 
-<td class="col-md-7">0.69</td>
+<td class="col-md-7">1.64</td>
   
 
-<td class="col-md-8">0.50</td>
+<td class="col-md-8">0.62</td>
   
 
-<td class="col-md-9">0.67</td>
+<td class="col-md-9">0.25</td>
   
 s
 </tr>
