--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
             </thead>
             <tbody>
               
+<tr>
+    <td class="col-md-1">1</td>
+    <td class="col-md-2">AMZN</td>
+    
+<td class="col-md-3">1.85</td>
+  
+
+<td class="col-md-4">2.38</td>
+  
+
+<td class="col-md-5">1.83</td>
+  
+
+<td class="col-md-6">1.14</td>
+  
+
+<td class="col-md-7">0.69</td>
+  
+
+<td class="col-md-8">0.50</td>
+  
+
+<td class="col-md-9">0.33</td>
+  
+s
+</tr>
+
+  
+
             </tbody>
         </table>
     </div>
