--- a/index.html
+++ b/index.html
@@ -45,24 +45,24 @@
               
 <tr>
     <td class="col-md-1">1</td>
-    <td class="col-md-2">AMZN</td>
+    <td class="col-md-2">QQQ</td>
     
-<td class="col-md-3">1.86</td>
+<td class="col-md-3">2.02</td>
   
 
-<td class="col-md-4">2.39</td>
+<td class="col-md-4">6.02</td>
   
 
-<td class="col-md-5">1.85</td>
+<td class="col-md-5">1.70</td>
   
 
-<td class="col-md-6">1.15</td>
+<td class="col-md-6">1.13</td>
   
 
-<td class="col-md-7">0.71</td>
+<td class="col-md-7">1.36</td>
   
 
-<td class="col-md-8">0.47</td>
+<td class="col-md-8">0.75</td>
   
 
 <td class="col-md-9">0.67</td>
