--- a/index.html
+++ b/index.html
@@ -50,22 +50,51 @@
 <td class="col-md-3">1.20</td>
   
 
-<td class="col-md-4">2.29</td>
+<td class="col-md-4">2.30</td>
   
 
 <td class="col-md-5">1.26</td>
   
 
-<td class="col-md-6">1.39</td>
+<td class="col-md-6">1.42</td>
   
 
-<td class="col-md-7">1.78</td>
+<td class="col-md-7">1.83</td>
   
 
-<td class="col-md-8">2.17</td>
+<td class="col-md-8">1.62</td>
   
 
-<td class="col-md-9">1.00</td>
+<td class="col-md-9">2.00</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">2</td>
+    <td class="col-md-2">AMZN</td>
+    
+<td class="col-md-3">1.83</td>
+  
+
+<td class="col-md-4">2.39</td>
+  
+
+<td class="col-md-5">1.87</td>
+  
+
+<td class="col-md-6">1.19</td>
+  
+
+<td class="col-md-7">0.75</td>
+  
+
+<td class="col-md-8">1.00</td>
+  
+
+<td class="col-md-9">0.67</td>
   
 s
 </tr>
