--- a/index.html
+++ b/index.html
@@ -65,7 +65,36 @@
 <td class="col-md-8">2.82</td>
   
 
-<td class="col-md-9">0.67</td>
+<td class="col-md-9">0.50</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">2</td>
+    <td class="col-md-2">FB</td>
+    
+<td class="col-md-3">0.77</td>
+  
+
+<td class="col-md-4">2.26</td>
+  
+
+<td class="col-md-5">1.81</td>
+  
+
+<td class="col-md-6">0.75</td>
+  
+
+<td class="col-md-7">0.60</td>
+  
+
+<td class="col-md-8">1.33</td>
+  
+
+<td class="col-md-9">0.33</td>
   
 s
 </tr>
