--- a/index.html
+++ b/index.html
@@ -47,25 +47,25 @@
     <td class="col-md-1">1</td>
     <td class="col-md-2">QQQ</td>
     
-<td class="col-md-3">2.06</td>
+<td class="col-md-3">2.07</td>
   
 
-<td class="col-md-4">5.53</td>
+<td class="col-md-4">5.55</td>
   
 
-<td class="col-md-5">1.78</td>
+<td class="col-md-5">1.80</td>
   
 
-<td class="col-md-6">1.17</td>
+<td class="col-md-6">1.18</td>
   
 
-<td class="col-md-7">1.13</td>
+<td class="col-md-7">1.20</td>
   
 
-<td class="col-md-8">2.82</td>
+<td class="col-md-8">3.78</td>
   
 
-<td class="col-md-9">0.50</td>
+<td class="col-md-9">1.00</td>
   
 s
 </tr>
@@ -74,27 +74,27 @@ s
 
 <tr>
     <td class="col-md-1">2</td>
-    <td class="col-md-2">FB</td>
+    <td class="col-md-2">AAPL</td>
     
-<td class="col-md-3">0.77</td>
+<td class="col-md-3">1.20</td>
   
 
-<td class="col-md-4">2.26</td>
+<td class="col-md-4">2.30</td>
   
 
-<td class="col-md-5">1.81</td>
+<td class="col-md-5">1.39</td>
   
 
-<td class="col-md-6">0.75</td>
+<td class="col-md-6">1.69</td>
   
 
-<td class="col-md-7">0.60</td>
+<td class="col-md-7">1.35</td>
   
 
-<td class="col-md-8">1.33</td>
+<td class="col-md-8">1.23</td>
   
 
-<td class="col-md-9">0.33</td>
+<td class="col-md-9">1.33</td>
   
 s
 </tr>
