--- a/index.html
+++ b/index.html
@@ -47,25 +47,25 @@
     <td class="col-md-1">1</td>
     <td class="col-md-2">QQQ</td>
     
-<td class="col-md-3">2.07</td>
+<td class="col-md-3">2.06</td>
   
 
-<td class="col-md-4">5.55</td>
+<td class="col-md-4">5.49</td>
   
 
-<td class="col-md-5">1.80</td>
+<td class="col-md-5">1.78</td>
   
 
-<td class="col-md-6">1.18</td>
+<td class="col-md-6">1.23</td>
   
 
-<td class="col-md-7">1.20</td>
+<td class="col-md-7">1.14</td>
   
 
-<td class="col-md-8">3.78</td>
+<td class="col-md-8">2.83</td>
   
 
-<td class="col-md-9">1.00</td>
+<td class="col-md-9">0.86</td>
   
 s
 </tr>
@@ -82,7 +82,7 @@ s
 <td class="col-md-4">2.30</td>
   
 
-<td class="col-md-5">1.39</td>
+<td class="col-md-5">1.41</td>
   
 
 <td class="col-md-6">1.69</td>
@@ -91,10 +91,39 @@ s
 <td class="col-md-7">1.35</td>
   
 
+<td class="col-md-8">1.25</td>
+  
+
+<td class="col-md-9">0.75</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">3</td>
+    <td class="col-md-2">AMZN</td>
+    
+<td class="col-md-3">1.82</td>
+  
+
+<td class="col-md-4">2.33</td>
+  
+
+<td class="col-md-5">2.03</td>
+  
+
+<td class="col-md-6">0.92</td>
+  
+
+<td class="col-md-7">0.75</td>
+  
+
 <td class="col-md-8">1.23</td>
   
 
-<td class="col-md-9">1.33</td>
+<td class="col-md-9">2.00</td>
   
 s
 </tr>
