--- a/index.html
+++ b/index.html
@@ -45,27 +45,27 @@
               
 <tr>
     <td class="col-md-1">1</td>
-    <td class="col-md-2">NFLX</td>
+    <td class="col-md-2">NIO</td>
     
-<td class="col-md-3">1.70</td>
+<td class="col-md-3">3.31</td>
   
 
-<td class="col-md-4">5.57</td>
+<td class="col-md-4">0.82</td>
   
 
-<td class="col-md-5">1.59</td>
+<td class="col-md-5">1.43</td>
   
 
-<td class="col-md-6">2.10</td>
+<td class="col-md-6">1.58</td>
   
 
-<td class="col-md-7">1.32</td>
+<td class="col-md-7">1.28</td>
   
 
-<td class="col-md-8">2.00</td>
+<td class="col-md-8">5.67</td>
   
 
-<td class="col-md-9">0.33</td>
+<td class="col-md-9">2.25</td>
   
 s
 </tr>
@@ -79,22 +79,22 @@ s
 <td class="col-md-3">1.83</td>
   
 
-<td class="col-md-4">2.31</td>
+<td class="col-md-4">2.32</td>
   
 
-<td class="col-md-5">2.06</td>
+<td class="col-md-5">2.07</td>
   
 
-<td class="col-md-6">0.78</td>
+<td class="col-md-6">0.77</td>
   
 
-<td class="col-md-7">0.88</td>
+<td class="col-md-7">0.91</td>
   
 
-<td class="col-md-8">1.58</td>
+<td class="col-md-8">1.67</td>
   
 
-<td class="col-md-9">0.40</td>
+<td class="col-md-9">0.75</td>
   
 s
 </tr>
@@ -108,22 +108,22 @@ s
 <td class="col-md-3">2.07</td>
   
 
-<td class="col-md-4">5.45</td>
+<td class="col-md-4">5.46</td>
   
 
-<td class="col-md-5">1.80</td>
+<td class="col-md-5">1.82</td>
   
 
-<td class="col-md-6">1.43</td>
+<td class="col-md-6">1.45</td>
   
 
-<td class="col-md-7">1.40</td>
+<td class="col-md-7">1.39</td>
   
 
 <td class="col-md-8">1.50</td>
   
 
-<td class="col-md-9">0.80</td>
+<td class="col-md-9">0.89</td>
   
 s
 </tr>
