--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <td class="col-md-4">0.82</td>
   
 
-<td class="col-md-5">1.39</td>
+<td class="col-md-5">1.42</td>
   
 
 <td class="col-md-6">1.72</td>
@@ -65,7 +65,7 @@
 <td class="col-md-8">6.00</td>
   
 
-<td class="col-md-9">0.36</td>
+<td class="col-md-9">0.20</td>
   
 s
 </tr>
@@ -74,12 +74,41 @@ s
 
 <tr>
     <td class="col-md-1">2</td>
+    <td class="col-md-2">AMZN</td>
+    
+<td class="col-md-3">1.84</td>
+  
+
+<td class="col-md-4">2.32</td>
+  
+
+<td class="col-md-5">2.14</td>
+  
+
+<td class="col-md-6">0.74</td>
+  
+
+<td class="col-md-7">1.17</td>
+  
+
+<td class="col-md-8">1.85</td>
+  
+
+<td class="col-md-9">2.67</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">3</td>
     <td class="col-md-2">QQQ</td>
     
 <td class="col-md-3">2.07</td>
   
 
-<td class="col-md-4">5.35</td>
+<td class="col-md-4">5.24</td>
   
 
 <td class="col-md-5">1.86</td>
@@ -91,10 +120,10 @@ s
 <td class="col-md-7">1.37</td>
   
 
-<td class="col-md-8">1.40</td>
+<td class="col-md-8">1.32</td>
   
 
-<td class="col-md-9">1.43</td>
+<td class="col-md-9">0.78</td>
   
 s
 </tr>
