--- a/index.html
+++ b/index.html
@@ -45,27 +45,27 @@
               
 <tr>
     <td class="col-md-1">1</td>
-    <td class="col-md-2">AAPL</td>
+    <td class="col-md-2">QQQ</td>
     
-<td class="col-md-3">1.19</td>
+<td class="col-md-3">2.20</td>
   
 
-<td class="col-md-4">2.19</td>
+<td class="col-md-4">3.46</td>
   
 
-<td class="col-md-5">1.57</td>
+<td class="col-md-5">1.65</td>
   
 
-<td class="col-md-6">0.83</td>
+<td class="col-md-6">0.75</td>
   
 
-<td class="col-md-7">0.62</td>
+<td class="col-md-7">0.73</td>
   
 
 <td class="col-md-8">1.00</td>
   
 
-<td class="col-md-9">0.33</td>
+<td class="col-md-9">0.80</td>
   
 s
 </tr>
@@ -79,22 +79,22 @@ s
 <td class="col-md-3">2.50</td>
   
 
-<td class="col-md-4">4.27</td>
+<td class="col-md-4">4.28</td>
   
 
-<td class="col-md-5">5.11</td>
+<td class="col-md-5">5.14</td>
   
 
-<td class="col-md-6">4.73</td>
+<td class="col-md-6">4.43</td>
   
 
-<td class="col-md-7">0.86</td>
+<td class="col-md-7">0.85</td>
   
 
-<td class="col-md-8">0.69</td>
+<td class="col-md-8">0.78</td>
   
 
-<td class="col-md-9">1.00</td>
+<td class="col-md-9">1.50</td>
   
 s
 </tr>
