--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <td class="col-md-3">1.20</td>
   
 
-<td class="col-md-4">2.21</td>
+<td class="col-md-4">2.22</td>
   
 
 <td class="col-md-5">1.54</td>
@@ -62,10 +62,10 @@
 <td class="col-md-7">0.72</td>
   
 
-<td class="col-md-8">1.50</td>
+<td class="col-md-8">1.80</td>
   
 
-<td class="col-md-9">0.25</td>
+<td class="col-md-9">0.33</td>
   
 s
 </tr>
@@ -94,7 +94,36 @@ s
 <td class="col-md-8">1.00</td>
   
 
-<td class="col-md-9">1.67</td>
+<td class="col-md-9">0.50</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">3</td>
+    <td class="col-md-2">AMZN</td>
+    
+<td class="col-md-3">1.84</td>
+  
+
+<td class="col-md-4">1.96</td>
+  
+
+<td class="col-md-5">1.10</td>
+  
+
+<td class="col-md-6">0.93</td>
+  
+
+<td class="col-md-7">1.16</td>
+  
+
+<td class="col-md-8">0.71</td>
+  
+
+<td class="col-md-9">0.33</td>
   
 s
 </tr>
