--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
             </thead>
             <tbody>
               
+<tr>
+    <td class="col-md-1">1</td>
+    <td class="col-md-2">SQ</td>
+    
+<td class="col-md-3">2.73</td>
+  
+
+<td class="col-md-4">4.59</td>
+  
+
+<td class="col-md-5">5.02</td>
+  
+
+<td class="col-md-6">1.82</td>
+  
+
+<td class="col-md-7">0.96</td>
+  
+
+<td class="col-md-8">1.26</td>
+  
+
+<td class="col-md-9">1.00</td>
+  
+s
+</tr>
+
+  
+
             </tbody>
         </table>
     </div>
