--- a/index.html
+++ b/index.html
@@ -45,24 +45,24 @@
               
 <tr>
     <td class="col-md-1">1</td>
-    <td class="col-md-2">AAPL</td>
+    <td class="col-md-2">QQQ</td>
     
-<td class="col-md-3">1.19</td>
+<td class="col-md-3">2.21</td>
   
 
-<td class="col-md-4">2.00</td>
+<td class="col-md-4">3.13</td>
   
 
-<td class="col-md-5">1.59</td>
+<td class="col-md-5">1.28</td>
   
 
-<td class="col-md-6">0.57</td>
+<td class="col-md-6">0.51</td>
   
 
-<td class="col-md-7">1.10</td>
+<td class="col-md-7">0.77</td>
   
 
-<td class="col-md-8">0.50</td>
+<td class="col-md-8">1.18</td>
   
 
 <td class="col-md-9">0.67</td>
