--- a/index.html
+++ b/index.html
@@ -45,27 +45,27 @@
               
 <tr>
     <td class="col-md-1">1</td>
-    <td class="col-md-2">QQQ</td>
+    <td class="col-md-2">SQ</td>
     
-<td class="col-md-3">2.21</td>
+<td class="col-md-3">2.78</td>
   
 
-<td class="col-md-4">3.04</td>
+<td class="col-md-4">4.53</td>
   
 
-<td class="col-md-5">1.29</td>
+<td class="col-md-5">5.17</td>
   
 
-<td class="col-md-6">0.47</td>
+<td class="col-md-6">1.17</td>
   
 
-<td class="col-md-7">0.67</td>
+<td class="col-md-7">0.90</td>
   
 
-<td class="col-md-8">0.83</td>
+<td class="col-md-8">0.43</td>
   
 
-<td class="col-md-9">0.33</td>
+<td class="col-md-9">1.00</td>
   
 s
 </tr>
