--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
             </thead>
             <tbody>
               
+<tr>
+    <td class="col-md-1">1</td>
+    <td class="col-md-2">SQ</td>
+    
+<td class="col-md-3">2.78</td>
+  
+
+<td class="col-md-4">4.58</td>
+  
+
+<td class="col-md-5">5.26</td>
+  
+
+<td class="col-md-6">1.17</td>
+  
+
+<td class="col-md-7">0.93</td>
+  
+
+<td class="col-md-8">0.74</td>
+  
+
+<td class="col-md-9">1.67</td>
+  
+s
+</tr>
+
+  
+
             </tbody>
         </table>
     </div>
