--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
             </thead>
             <tbody>
               
+<tr>
+    <td class="col-md-1">1</td>
+    <td class="col-md-2">MU</td>
+    
+<td class="col-md-3">2.54</td>
+  
+
+<td class="col-md-4">2.16</td>
+  
+
+<td class="col-md-5">2.14</td>
+  
+
+<td class="col-md-6">1.14</td>
+  
+
+<td class="col-md-7">0.00</td>
+  
+
+<td class="col-md-8">0.00</td>
+  
+
+<td class="col-md-9">0.33</td>
+  
+s
+</tr>
+
+  
+
             </tbody>
         </table>
     </div>
