--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@ SOFTWARE.
 </header>
 <h1 id="blog-entries">Blog Entries</h1>
 <ul>
+<li><a href="blog/when-threadWaitRead-doesnt.html">When threadWaitRead Doesn’t</a></li>
 <li><a href="blog/development-notes-01-11-20.html">Development Notes: January 11th 2020</a></li>
 <li><a href="blog/development-notes-01-10-20.html">Development Notes: January 10th 2020</a></li>
 <li><a href="blog/development-notes-01-06-20.html">Development Notes: January 6th 2020</a></li>
