--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ SOFTWARE.
 </header>
 <h1 id="blog-entries">Blog Entries</h1>
 <ul>
-<li><a href="blog/diff_loss.html">Videos Should Lose More</a></li>
+<li><a href="blog/diff-loss.html">Videos Should Lose More</a></li>
 <li><a href="blog/neural-networks-are-for-hacking.html">Neural Networks Are For Hacking`</a></li>
 <li><a href="blog/making-nfts-with-plutus.html">Making NFTs with Plutus</a></li>
 <li><a href="blog/introducing-hasql-queue.html">Introducing <code>hasql-queue</code></a></li>
